# agent-memory-backend

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  requirements.txt
src/agent/: __main__.py  context.py  controller.py  protocol.py  server.py  utility.py
src/agent/agent/: base.py  openai.py
src/agent/client/: __init__.py  agent.py  client.py  connection.py  context.py  controller.py  storage.py  watcher.py  workspace.py
src/agent/client/storage/: __init__.py  base.py  in_memory.py
src/agent/embedder/: __init__.py  base.py  qwen3.py
src/agent/server/: __init__.py  __main__.py  controller.py  run.py
src/agent/server/storage/: in_memory.py
src/agent/storage/: base.py  in_memory.py
src/agent/utility/: __init__.py  prompt.py
