[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent"
authors = []
description = ""
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    # TODO configure install dependencies
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pre-commit~=4.5",
    "ruff==0.15.0",
]

[tool.setuptools.dynamic]
version = {attr = "agent.__version__"}

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
